# TubeTunes

./: .gitignore  README.md  cli.py  main.py  player.py  playlist.py  pyproject.toml  queue_manager.py  requirements.txt  storage_playlist.py
data/: playlists.json
src/: app.py  tes.py
src/cli/: cli.py  menu.py
src/core/: mpv_ipc.py  player.py  playlist_loader.py  queue_manager.py
src/data/: playlists.json
src/services/: discord_rpc.py  playback_service.py  playlist_service.py
src/storage/: playlist_storage.py
src/tubetunes.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tubetunes.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
