[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tubetunes"
version = "1.1.0"
description = "CLI YouTube Playlist Audio Player"
authors = [
    {name = "Ryan"}
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "yt-dlp",
    "rich",
    "questionary",
    "psutil",
    "pypresence"
]


[project.scripts]
tubetunes = "src.app:main"

[tool.setuptools.packages.find]
include = ["src*"]